--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,6 @@ h3 {
 
 /* Projects Section */
 #projects .project {
-    background-color: #333;
     padding: 20px;
     border-radius: 8px;
     margin-bottom: 20px;
@@ -90,7 +89,19 @@ h3 {
 
 #projects .project:hover {
     transform: translateY(-10px);
-    background-color: #6f34a1; /* Purple Hover */
+}
+
+/* Specific Background Colors for Individual Projects */
+#projects .project:nth-child(1) {
+    background-color: #6f34a1; /* Purple */
+}
+
+#projects .project:nth-child(2) {
+    background-color: #b052ff; /* Lighter Purple */
+}
+
+#projects .project:nth-child(3) {
+    background-color: #dc87ff; /* Light Pink */
 }
 
 .project p {
@@ -99,7 +110,7 @@ h3 {
 
 .project h3 {
     font-size: 1.6em;
-    color: #dc87ff;
+    color: #fff;
     margin-bottom: 10px;
 }
 
