--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,19 @@ h3 {
 
 /* Contact Section */
 #contact {
-    background-color: #333;
+    background-color: #6f34a1; /* Same color as Project and About Me sections */
+}
+
+#contact h2 {
+    font-size: 2.2em;
+    color: #fff;
+    margin-bottom: 20px;
+}
+
+#contact p {
+    font-size: 1.2em;
+    color: #fff;
+    margin-bottom: 20px;
 }
 
 #contact a {
